@@ -104,12 +104,12 @@ char *stripComment(char *line)
 {
   char *aux;
   
-  if (line[0]=='#') {
+  if (line[0]==CommentChar) {
     line[0]='\0';
     return line;
   }
   
-  aux=strchr(line,'#');
+  aux=strchr(line,CommentChar);
   
   if (aux!=NULL) {
     if (*(aux-1)==' ')
@@ -122,6 +122,7 @@ char *stripComment(char *line)
 void initConfig(s_fidoconfig *config) {
    // set all to 0
    memset(config, 0, sizeof(s_fidoconfig));
+   config -> CommentChar = CommentChar;
    config -> loguid = config -> loggid = config -> logperm = -1;
    config -> tossingExt = "tos";
    config -> convertLongNames = config -> convertShortNames = cDontTouch;
